--- a/Source/Core/DiscIO/CMakeLists.txt
+++ b/Source/Core/DiscIO/CMakeLists.txt
@@ -21,5 +21,4 @@ set(SRCS	Src/BannerLoader.cpp
 			Src/VolumeWiiCrypted.cpp
 			Src/WiiWad.cpp)
 
-add_library(discio STATIC ${SRCS})
-target_link_libraries(discio common)
+add_dolphin_library(discio "${SRCS}" "")
