--- a/Source/Core/VideoCommon/CMakeLists.txt
+++ b/Source/Core/VideoCommon/CMakeLists.txt
@@ -61,8 +61,7 @@ if(LIBAV_FOUND OR WIN32)
 	set(SRCS ${SRCS} Src/AVIDump.cpp)
 endif()
 
-add_library(videocommon STATIC ${SRCS})
-target_link_libraries(videocommon ${LIBS})
+add_dolphin_library(videocommon "${SRCS}" "${LIBS}")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	if(LIBAV_FOUND)
