Add USBEmulated to simplify the interface for emulated devices.

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -118,6 +118,7 @@ set(SRCS	Src/ActionReplay.cpp
 			Src/HW/Sram.cpp
 			Src/HW/StreamADPCM.cpp
 			Src/HW/SystemTimers.cpp
+			Src/HW/USBEmulated.cpp
 			Src/HW/USBInterface.cpp
 			Src/HW/VideoInterface.cpp
 			Src/HW/WII_IOB.cpp
