--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -305,6 +305,7 @@
     <ClCompile Include="Src\HW\Sram.cpp" />
     <ClCompile Include="Src\HW\StreamADPCM.cpp" />
     <ClCompile Include="Src\HW\SystemTimers.cpp" />
+    <ClCompile Include="Src\HW\USBEmulated.cpp" />
     <ClCompile Include="Src\HW\USBInterface.cpp" />
     <ClCompile Include="Src\HW\USBReal.cpp" />
     <ClCompile Include="Src\HW\VideoInterface.cpp" />
@@ -512,6 +513,7 @@
     <ClInclude Include="Src\HW\Sram.h" />
     <ClInclude Include="Src\HW\StreamADPCM.h" />
     <ClInclude Include="Src\HW\SystemTimers.h" />
+    <ClInclude Include="Src\HW\USBEmulated.h" />
     <ClInclude Include="Src\HW\USBInterface.h" />
     <ClInclude Include="Src\HW\USBReal.h" />
     <ClInclude Include="Src\HW\VideoInterface.h" />
