first implementation of memcard from directory, creates a memory card from USERDIR/GC/<REGION>/Card <A/B> Savestates include the entire memorycard, but the only saves that should be modified are the ones that are directly modified by the game the others are preserved merely to avoid changing the memory card header during the game as some games (Zelda) refuse to save

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -98,8 +98,10 @@ set(SRCS	Src/ActionReplay.cpp
 			Src/HW/EXI_DeviceGecko.cpp
 			Src/HW/EXI_DeviceIPL.cpp
 			Src/HW/EXI_DeviceMemoryCard.cpp
+			Src/HW/EXI_DeviceMemoryCardFolder.cpp
 			Src/HW/EXI_DeviceMic.cpp
 			Src/HW/GCMemcard.cpp
+			Src/HW/GCMemcardDirectory.cpp
 			Src/HW/GCPad.cpp
 			Src/HW/GCPadEmu.cpp
 			Src/HW/GPFifo.cpp
