--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -285,8 +285,10 @@
     <ClCompile Include="Src\HW\EXI_DeviceGecko.cpp" />
     <ClCompile Include="Src\HW\EXI_DeviceIPL.cpp" />
     <ClCompile Include="Src\HW\EXI_DeviceMemoryCard.cpp" />
+    <ClCompile Include="Src\HW\EXI_DeviceMemoryCardFolder.cpp" />
     <ClCompile Include="Src\HW\EXI_DeviceMic.cpp" />
     <ClCompile Include="Src\HW\GCMemcard.cpp" />
+    <ClCompile Include="Src\HW\GCMemcardDirectory.cpp" />
     <ClCompile Include="Src\HW\GCPad.cpp" />
     <ClCompile Include="Src\HW\GCPadEmu.cpp" />
     <ClCompile Include="Src\HW\GPFifo.cpp" />
@@ -491,6 +493,7 @@
     <ClInclude Include="Src\HW\EXI_DeviceGecko.h" />
     <ClInclude Include="Src\HW\EXI_DeviceIPL.h" />
     <ClInclude Include="Src\HW\EXI_DeviceMemoryCard.h" />
+    <ClInclude Include="Src\HW\EXI_DeviceMemoryCardFolder.h" />
     <ClInclude Include="Src\HW\EXI_DeviceMic.h" />
     <ClInclude Include="Src\HW\GCMemcard.h" />
     <ClInclude Include="Src\HW\GCPad.h" />
