--- a/Source/Core/AudioCommon/AudioCommon.vcxproj.filters
+++ b/Source/Core/AudioCommon/AudioCommon.vcxproj.filters
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="SoundStreams">
+      <UniqueIdentifier>{25ec8f16-fc60-4a63-bc3e-ad0272fd5942}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="Src\aldlist.cpp" />
     <ClCompile Include="Src\AudioCommon.cpp" />
+    <ClCompile Include="Src\DPL2Decoder.cpp" />
     <ClCompile Include="Src\Mixer.cpp" />
     <ClCompile Include="Src\WaveFile.cpp" />
     <ClCompile Include="Src\AOSoundStream.cpp">
@@ -11,20 +17,20 @@
     <ClCompile Include="Src\DSoundStream.cpp">
       <Filter>SoundStreams</Filter>
     </ClCompile>
+    <ClCompile Include="Src\NullSoundStream.cpp">
+      <Filter>SoundStreams</Filter>
+    </ClCompile>
     <ClCompile Include="Src\OpenALStream.cpp">
       <Filter>SoundStreams</Filter>
     </ClCompile>
     <ClCompile Include="Src\XAudio2Stream.cpp">
       <Filter>SoundStreams</Filter>
     </ClCompile>
-    <ClCompile Include="Src\NullSoundStream.cpp">
-      <Filter>SoundStreams</Filter>
-    </ClCompile>
-    <ClCompile Include="Src\DPL2Decoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\aldlist.h" />
     <ClInclude Include="Src\AudioCommon.h" />
+    <ClInclude Include="Src\DPL2Decoder.h" />
     <ClInclude Include="Src\Mixer.h" />
     <ClInclude Include="Src\SoundStream.h" />
     <ClInclude Include="Src\WaveFile.h" />
@@ -43,14 +49,8 @@
     <ClInclude Include="Src\XAudio2Stream.h">
       <Filter>SoundStreams</Filter>
     </ClInclude>
-    <ClInclude Include="Src\DPL2Decoder.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CMakeLists.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="SoundStreams">
-      <UniqueIdentifier>{efb9f5b5-ab0c-455d-b78b-26df725386af}</UniqueIdentifier>
-    </Filter>
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
 </Project>
