Darwin: Don't overwrite the C compiler if the user set one manually.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,17 @@ option(UNITTESTS "Build unitests" OFF)
 # Update compiler before calling project()
 if (APPLE)
 	# Use clang compiler
-	set(CMAKE_C_COMPILER "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang")
-	set(CMAKE_CXX_COMPILER "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++")
-	if (NOT EXISTS "${CMAKE_CXX_COMPILER}")
-		set(CMAKE_C_COMPILER "clang")
-		set(CMAKE_CXX_COMPILER "clang++")
+	if (NOT DEFINED CMAKE_CXX_COMPILER)
+		set(CMAKE_CXX_COMPILER "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++")
+		if (NOT EXISTS "${CMAKE_CXX_COMPILER}")
+			set(CMAKE_CXX_COMPILER "clang++")
+		endif()
+	endif()
+	if (NOT DEFINED CMAKE_CXX_COMPILER)
+		set(CMAKE_C_COMPILER "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang")
+		if (NOT EXISTS "${CMAKE_C_COMPILER}")
+			set(CMAKE_C_COMPILER "clang")
+		endif()
 	endif()
 endif()
 project(dolphin-emu)
